# UMOC-Backend

./: .env.test  .gitignore  Dockerfile  README.md  Schnittstellenspezifikation.md  conftest.py  databaseManager.py  docker-compose.yml  fix_deps.py  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  run_tests.py  setup.py  umoc.db  vscode_pytest_bootstrap.py  websocket_test.html
.github/workflows/: ci.yml  manuel-publish.yml
data/: umoc.db
docs/: CHANGELOG.md  Schnittstellenspezifikation.md  api_documentation_routes.md  api_specification.md  errors.md
resource/: secrets.py
src/: __init__.py  databaseManager.py  main.py  sqlModel.py
src/api/: routes.py  websockets.py
src/api/database/: databaseManager.py  insertDummyData.py  models.py
src/app/: __init__.py  config.py  extensions.py
src/app/api/: routes.py
src/app/models/: __init__.py  group.py  inventory.py  items.py  message.py  user.py
src/app/services/: contact_service.py  dummy_data.py  group_service.py  item_service.py  message_service.py  user_service.py
src/app/utils/: utils.py
src/database/: models.py
src/metrics/: locustfile.py
src/resource/: config.py
src/templates/: websocket_test.html
src/utils/: encryption.py
test/: __init__.py  __main__.py  compatibility_patch.py  conftest.py  dummyFrontend.py  locustfile.py  setup_path.py  setup_tests.py  testRoutes.py  testWebsockets.html  test_config.py  test_contacts.py  test_integration.py  test_messages.py  test_user_auth.py  test_websockets.py  websocketTest.py
test/fixtures/: contact_fixtures.py  message_fixtures.py
(+11 files in other folders)
