[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API tests",
    "websocket: WebSocket tests"
]

[tool.isort]
profile = "black"
src_paths = ["src", "app", "test"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
